k8s/app/app-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: ai.chainer-sample.net
      http:
        paths:
        - backend:
            serviceName: app-svc
            servicePort: 3000
